[package]
name = "PROGRAM"
version = "0.1.0"
authors = ["morph"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc   = "0.2.33"
nix	   = "0.19.1"
flate2 = "1.0"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1